color standardization oceanProximity

--- a/EDA/eda.Rmd
+++ b/EDA/eda.Rmd
@@ -41,7 +41,7 @@ colnames(housing)
 head(housing)
 ```
 
-```{r}
+```{r,message = FALSE, warnings = FALSE}
 library(ggplot2)
 library(DataExplorer)
 library(ggpubr)
@@ -52,8 +52,11 @@ columns <- columns[-8]
 
 DataExplorer::plot_density(housing)
 
-count_plot <- ggplot(housing, aes(ocean_proximity)) +
-  geom_bar(colour="black", fill = "grey") +
+#count_plot <- ggplot(housing, aes(ocean_proximity)) +
+#  geom_bar(colour="black", fill = "grey") +
+#  theme_pubclean()
+count_plot <- ggplot(housing, aes(x=ocean_proximity,fill=ocean_proximity)) +
+  geom_bar(colour="black") +
   theme_pubclean()
 
 count_plot
@@ -61,7 +64,7 @@ count_plot
 ```
 
 
-```{r}
+```{r,message = FALSE, warnings = FALSE}
 library(corrplot)
 
 DataExplorer::plot_correlation(housing)
@@ -83,49 +86,49 @@ library(ggplot2)
 ggplot(housing, aes(x=ocean_proximity, y=housing_median_age, fill=ocean_proximity))  +
   geom_violin() + 
   geom_boxplot(width=0.1) +
-  scale_fill_brewer(palette="PuOr") + 
+  #scale_fill_brewer(palette="PuOr") + 
   theme_minimal() +
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) ->p1
 
 ggplot(housing, aes(x=ocean_proximity, y=mean_rooms,fill=ocean_proximity)) + 
   geom_violin() + 
   geom_boxplot(width=0.1) +
-  scale_fill_brewer(palette="PuOr") + 
+  #scale_fill_brewer(palette="PuOr") + 
   theme_minimal() +
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))->p2
 
 ggplot(housing, aes(x=ocean_proximity, y=mean_bedrooms, fill=ocean_proximity)) + 
   geom_violin() + 
   geom_boxplot(width=0.1) +
-  scale_fill_brewer(palette="PuOr") + 
+  #scale_fill_brewer(palette="PuOr") + 
   theme_minimal()+
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))->p3
 
 ggplot(housing, aes(x=ocean_proximity, y=population, fill=ocean_proximity)) + 
   geom_violin() + 
   geom_boxplot(width=0.1) +
-  scale_fill_brewer(palette="PuOr") + 
+  #scale_fill_brewer(palette="PuOr") + 
   theme_minimal()+
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))->p4
 
 ggplot(housing, aes(x=ocean_proximity, y=households, fill=ocean_proximity)) + 
   geom_violin() + 
   geom_boxplot(width=0.1) +
-  scale_fill_brewer(palette="PuOr") + 
+  #scale_fill_brewer(palette="PuOr") + 
   theme_minimal()+
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))->p5
 
 ggplot(housing, aes(x=ocean_proximity, y=median_income, fill=ocean_proximity)) + 
   geom_violin() + 
   geom_boxplot(width=0.1) +
-  scale_fill_brewer(palette="PuOr") + 
+  #scale_fill_brewer(palette="PuOr") + 
   theme_minimal() +
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))->p6
 
 ggplot(housing, aes(x=ocean_proximity, y=median_house_value, fill=ocean_proximity)) + 
   geom_violin() + 
   geom_boxplot(width=0.1) +
-  scale_fill_brewer(palette="PuOr") + 
+  #scale_fill_brewer(palette="PuOr") + 
   theme_minimal() +
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))->p7
 
