--- a/literature.bib
+++ b/literature.bib
@@ -53,3 +53,20 @@ doi = {10.2307/143400},
 URL = { https://www.tandfonline.com/doi/abs/10.2307/143400},
 eprint = { https://www.tandfonline.com/doi/pdf/10.2307/143400}
 }
+
+LIME
+
+@inproceedings{lime,
+  author    = {Marco Tulio Ribeiro and
+               Sameer Singh and
+               Carlos Guestrin},
+  title     = {{"Why Should {I} Trust You?": Explaining the Predictions of Any Classifier}},
+  booktitle = {Proceedings of the 22nd {ACM} {SIGKDD} International Conference on
+               Knowledge Discovery and Data Mining, San Francisco, CA, USA, August
+               13-17, 2016},
+  pages     = {1135--1144},
+  year      = {2016},
+  url = {https://doi.org/10.18653/v1/n16-3020}
+}
+
+
