--- a/literature.bib
+++ b/literature.bib
@@ -67,7 +67,7 @@ eprint = { https://www.tandfonline.com/doi/pdf/10.2307/143400}
   url = {https://doi.org/10.18653/v1/n16-3020}
 }
 
-@article{pace1997sparse,
+@article{2-2-pace1997sparse,
   title={Sparse spatial autoregressions},
   author={Pace, R Kelley and Barry, Ronald},
   journal={Statistics \& Probability Letters},
@@ -78,7 +78,7 @@ eprint = { https://www.tandfonline.com/doi/pdf/10.2307/143400}
   publisher={Elsevier}
 }
 
-@article{breiman1999random,
+@article{2-2-breiman1999random,
   title={Random forests},
   author={Breiman, Leo},
   journal={UC Berkeley TR567},
